--- a/Restaurantify/Resources/MenuItemCell_iPad.xib
+++ b/Restaurantify/Resources/MenuItemCell_iPad.xib
@@ -59,7 +59,7 @@
 								<string key="NSFrame">{{135, 17}, {343, 21}}</string>
 								<reference key="NSSuperview" ref="879800973"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="398602619"/>
+								<reference key="NSNextKeyView" ref="467222029"/>
 								<string key="NSReuseIdentifierKey">_NS:345</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -74,22 +74,47 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="12011418">
 									<int key="type">1</int>
 									<double key="pointSize">17</double>
 								</object>
-								<object class="NSFont" key="IBUIFont">
+								<object class="NSFont" key="IBUIFont" id="462876282">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUILabel" id="467222029">
+								<reference key="NSNextResponder" ref="879800973"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{681, 17}, {67, 21}}</string>
+								<reference key="NSSuperview" ref="879800973"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="466623082"/>
+								<string key="NSReuseIdentifierKey">_NS:345</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">$0.00</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTIwMDE5OTE0IDAuMjQxMDE4NDM5NCAwLjU4NjczNDY5MzkAA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<reference key="IBUIFontDescription" ref="12011418"/>
+								<reference key="IBUIFont" ref="462876282"/>
+							</object>
 							<object class="IBUITextView" id="398602619">
 								<reference key="NSNextResponder" ref="879800973"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{135, 41}, {455, 71}}</string>
+								<string key="NSFrame">{{135, 41}, {613, 71}}</string>
 								<reference key="NSSuperview" ref="879800973"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:640</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -132,6 +157,7 @@
 								<string key="NSFrame">{{52, 46}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="879800973"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="398602619"/>
 								<string key="NSReuseIdentifierKey">_NS:1062</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -142,7 +168,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{600, 132}</string>
+						<string key="NSFrameSize">{768, 132}</string>
 						<reference key="NSSuperview" ref="1002037590"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="713264363"/>
@@ -158,7 +184,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{600, 133}</string>
+				<string key="NSFrameSize">{768, 133}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="879800973"/>
@@ -210,6 +236,14 @@
 					</object>
 					<int key="connectionID">12</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">priceLabel</string>
+						<reference key="source" ref="1002037590"/>
+						<reference key="destination" ref="467222029"/>
+					</object>
+					<int key="connectionID">14</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -238,6 +272,7 @@
 							<reference ref="916182391"/>
 							<reference ref="398602619"/>
 							<reference ref="466623082"/>
+							<reference ref="467222029"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -261,6 +296,11 @@
 						<reference key="object" ref="466623082"/>
 						<reference key="parent" ref="1002037590"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">13</int>
+						<reference key="object" ref="467222029"/>
+						<reference key="parent" ref="1002037590"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -269,6 +309,7 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">MenuItemCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -279,7 +320,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">12</int>
+			<int key="maxID">14</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -319,6 +360,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="detailLabel">UITextView</string>
 						<string key="indicatorView">UIActivityIndicatorView</string>
+						<string key="priceLabel">UILabel</string>
 						<string key="textLabel">UILabel</string>
 						<string key="thumbnailImage">UIImageView</string>
 					</dictionary>
@@ -330,6 +372,10 @@
 						<object class="IBToOneOutletInfo" key="indicatorView">
 							<string key="name">indicatorView</string>
 							<string key="candidateClassName">UIActivityIndicatorView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="priceLabel">
+							<string key="name">priceLabel</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="textLabel">
 							<string key="name">textLabel</string>
